refactor: update repository methods to use pagination and remove unused methods